--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node ./app.js",
+    "dev": "nodemon ./app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -27,6 +28,7 @@
     "mongoose": "4.4.10",
     "mongoose-unique-validator": "1.0.2",
     "morgan": "^1.9.1",
+    "nodemon": "^1.19.4",
     "passport": "0.3.2",
     "passport-local": "1.0.0",
     "request": "^2.88.0",
