--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "mongoose-unique-validator": "1.0.2",
     "morgan": "^1.9.1",
     "nodemon": "^1.19.4",
-    "passport": "0.3.2",
+    "passport": "^0.3.2",
     "passport-local": "1.0.0",
     "request": "^2.88.0",
     "slug": "0.9.1",
